test/errors/type/io/read5.yasl
let f = io.open('test/unit_tests/test_vm/sample.txt')

f.read([])
